<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.playtime.Chat.ChatActivity"
    android:background="#E9E9E9">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sendLayout"
        android:layout_marginBottom="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"></androidx.recyclerview.widget.RecyclerView>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/sendLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <EditText
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_marginRight="85dp"
            android:layout_height="wrap_content"
            android:hint="Message"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/rounded_messagebox"
            android:id="@+id/message"
            />
        <Button
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_marginLeft="300dp"
            android:layout_height="wrap_content"
            android:text="Send"
            android:id="@+id/send"
            android:textColor="#FFFFFF"
            android:background="@drawable/rounded_button"/>
    </RelativeLayout>

</RelativeLayout>
