...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SignOut"
            android:onClick="logoutUser" />
    </LinearLayout>

    <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/frame"
        android:background="#E9E9E9"
...
        android:layout_marginLeft="250dp"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:menu="@menu/navigation"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@drawable/selector"
        />

</RelativeLayout>
